--- a/site.html
+++ b/site.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en"></html>
+<link href="assets/stylesheet.css" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <title>Your #1 Applicant :)</title>
+</head>
+<body>
+<nav>
+    <a href="portfolio.html" target="_self">portfolio</a>
+</nav>
+<h1><b>Antonio Anguaino</b></h1>
+<article>
+    <h2>About Me</h2>
+    <h3>bio</h3>
+    <p>i'm like, just a guy ya know</p>
+    <aside>
+        <h3>technical skills</h3>
+        <p>html 1 star general</p>
+        <!-- this is gonna be my 1 star! -->
+        <canvas width="200" height="200">
+                one orange boi
+        </canvas>
+        <script>
+            const canvas = document.querySelector('canvas');
+            const ctx = canvas.getContext('2d');
+            ctx.fillStyle = 'orange';
+            ctx.fillRect(10, 10, 100, 100);
+        </script>
+    </aside>
+</article>
+<br>
+</body>
+<footer>
+    <hr>
+    <p>woah what are you doing here :p</p>
+</footer>
 
