began implementing site lay out

--- a/site.html
+++ b/site.html
@@ -294,7 +294,7 @@ MMMWWWW&&&&&&W&&WW&WWWWWWWWW&WWWWWW&&&&&&&&&&&&&&&&&&W&&8Maa#W&&&&WWWWWWWWWW&&WW
     </figure>
     <h3>invisable me to be rendered later!?:</h3>
     <template id="invisibleMe">
-        <img src="assets/selfie.jpg" alt="me that was loaded after the page">
+        <img src="assets/selfie.jpg" alt="me that will be loaded after the page">
     </template>
 
 </section>
